Added Starter code and activity linking

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Skule-App</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_events">Events</string>
+    <string name="title_activity_home">Home</string>
+    <string name="title_activity_clubs_list">ClubsList</string>
+    <string name="title_activity_club">ClubActivity</string>
 </resources>
