Added a template for the events page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_home">Home</string>
     <string name="title_activity_clubs_list">ClubsList</string>
     <string name="title_activity_club">ClubActivity</string>
+    <string name="events_toolbar">Events</string>
 </resources>
